--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -40,6 +40,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      id-token: write
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3.0.2
