--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,6 +42,7 @@ jobs:
     needs: build
     permissions:
       id-token: write
+      pages: write
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3.0.2
