--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -50,7 +50,14 @@ jobs:
           name: nuzones-service
 
       - name: Deploy artifact
-        uses: actions/deploy-pages@v1.2.5
+        uses: appleboy/ssh-action@v0.1.2
         with:
-          artifact_name: nuzones-service
+          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
+          key: ${{secrets.SSH_PRIVATE_KEY}} # Private or public key of the server
+          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
+          script: java -jar nuzones-service-${{ github.sha }}.jar
+            
+            
+            
+            
    
