--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -40,9 +40,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      pages: write
+    environment: main
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3.0.2
