--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -40,7 +40,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment: main
+    environment: nuzones
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3.0.2
