--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,32 +28,47 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
       
-    - name: Rename the artifact
-      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar nuzones-service-${{ github.sha }}.jar
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3.1.2
-      with:
-        name: nuzones-service
-        path: nuzones-service-${{ github.sha }}.jar 
+#    - name: Rename the artifact
+#      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar nuzones-service-${{ github.sha }}.jar
+#
+#    - name: Upload artifact
+#      uses: actions/upload-artifact@v3.1.2
+#      with:
+#        name: nuzones-service
+#        path: nuzones-service-${{ github.sha }}.jar
   
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment: nuzones
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3.0.2
-        with:
-          name: nuzones-service
+#      - name: Download artifact
+#        uses: actions/download-artifact@v3.0.2
+#        with:
+#          name: nuzones-service
+
+      # create directory on ubuntu, copy downloaded artifact into ubuntu and run java command
+      - name: Copy repository contents via scp
+          uses: appleboy/scp-action@main
+          env:
+            host: ${{secrets.SSH_HOST}}
+            key: ${{secrets.SSH_PRIVATE_KEY}}
+            username: ${{ secrets.SSH_USERNAME }}
+          with:
+            source: "."
+            target: "/app/nuzones"
 
       - name: Deploy artifact
-        uses: appleboy/ssh-action@v0.1.2
+        uses: appleboy/ssh-action@main
         with:
-          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
-          key: ${{secrets.SSH_PRIVATE_KEY}} # Private or public key of the server
-          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
-          script: java -jar nuzones-service-${{ github.sha }}.jar
+          host: ${{secrets.SSH_HOST}}
+          key: ${{secrets.SSH_PRIVATE_KEY}}
+          username: ${{ secrets.SSH_USERNAME }}
+          script: |
+            cd /app/nuzones
+            echo 'Deployment successful to digital ocean'
+#          script: mkdir -p $dir && java -jar nuzones-service-${{ github.sha }}.jar
+
             
             
             
