--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,25 +28,14 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
       
-#    - name: Rename the artifact
-#      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar nuzones-service-${{ github.sha }}.jar
-#
-#    - name: Upload artifact
-#      uses: actions/upload-artifact@v3.1.2
-#      with:
-#        name: nuzones-service
-#        path: nuzones-service-${{ github.sha }}.jar
+    - name: Rename the artifact
+      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar nuzones-service-${{ github.sha }}.jar
   
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment: nuzones
     steps:
-#      - name: Download artifact
-#        uses: actions/download-artifact@v3.0.2
-#        with:
-#          name: nuzones-service
-
       # create directory on ubuntu, copy downloaded artifact into ubuntu and run java command
       - name: Copy repository contents via scp
           uses: appleboy/scp-action@main
@@ -55,7 +44,7 @@ jobs:
             key: ${{secrets.SSH_PRIVATE_KEY}}
             username: ${{ secrets.SSH_USERNAME }}
           with:
-            source: "."
+            source: "nuzones-service-${{ github.sha }}.jar"
             target: "/app/nuzones"
 
       - name: Deploy artifact
