--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,8 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Github pages deployment
-
+name: Deployment to Digital Ocean
 on:
   push:
     branches: [ "main" ]
@@ -48,10 +47,10 @@ jobs:
         name: nuzones-service
 
     - name: Copy build to host
-      uses: garygrossgarten/github-action-scp@release
+      uses: appleboy/scp-action@master
       with:
-        local: nuzones-service-${{ github.sha }}.jar
-        remote: app/nuzones/nuzones-service-${{ github.sha }}.jar
+        source: nuzones-service-${{ github.sha }}.jar
+        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
         host: ${{ secrets.HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
