--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,12 +1,4 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Deployment to Digital Ocean
+name: Build and Deploy
 on:
   push:
     branches: [ "main" ]
@@ -27,33 +19,33 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
       
-#    - name: Rename the artifact
-#      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar nuzones-service-${{ github.sha }}.jar
-#
-#    - name: Upload artifact
-#      uses: actions/upload-artifact@v3.1.2
-#      with:
-#        name: nuzones-service
-#        path: nuzones-service-${{ github.sha }}.jar
+    - name: Rename the artifact
+      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar nuzones-service-${{ github.sha }}.jar
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: nuzones-service
+        path: nuzones-service-${{ github.sha }}.jar
   
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment: nuzones
     steps:
-#    - name: Download artifact
-#      uses: actions/download-artifact@v3.0.2
-#      with:
-#        name: nuzones-service
+    - name: Download artifact
+      uses: actions/download-artifact@v3.0.2
+      with:
+        name: nuzones-service
 
-#    - name: Copy build to host
-#      uses: appleboy/scp-action@master
-#      with:
-#        source: nuzones-service-${{ github.sha }}.jar
-#        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
-#        host: ${{ secrets.HOST }}
-#        username: ${{ secrets.SSH_USERNAME }}
-#        key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Copy build to host
+      uses: appleboy/scp-action@master
+      with:
+        source: nuzones-service-${{ github.sha }}.jar
+        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Deploy artifact
       uses: appleboy/ssh-action@v0.1.2
@@ -61,15 +53,7 @@ jobs:
         host: ${{ secrets.SSH_HOST }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         username: ${{ secrets.SSH_USERNAME }}
-#        script: cd /app/nuzones && echo 'Deployment successful to digital ocean'
         script: |
           mkdir -p /app/nuzones 
           cd /app/nuzones
-          git clone git@github.com:uobjuniorsolutions/Nuzones.gitjava 
           echo 'Deployment successful to digital ocean'
-
-            
-            
-            
-            
-   
