--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,13 +39,13 @@ jobs:
         name: nuzones-service
 
     - name: Copy build to host
-      uses: appleboy/scp-action@master
+      uses: garygrossgarten/github-action-scp@release
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: nuzones-service-${{ github.sha }}.jar
-        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+        local: nuzones-service-${{ github.sha }}.jar
+        remote: app/nuzones/nuzones-service-${{ github.sha }}.jar
 
     - name: Deploy artifact
       uses: appleboy/ssh-action@v0.1.2
