--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,14 +38,14 @@ jobs:
       with:
         name: nuzones-service
 
-    - name: Copy build to host
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: nuzones-service-${{ github.sha }}.jar
-        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+#    - name: Copy build to host
+#      uses: appleboy/scp-action@master
+#      with:
+#        host: ${{ secrets.HOST }}
+#        username: ${{ secrets.SSH_USERNAME }}
+#        key: ${{ secrets.SSH_PRIVATE_KEY }}
+#        source: nuzones-service-${{ github.sha }}.jar
+#        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
 
     - name: Deploy artifact
       uses: appleboy/ssh-action@v0.1.2
