--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,22 +38,28 @@ jobs:
       with:
         name: nuzones-service
 
-#    - name: Copy build to host
-#      uses: appleboy/scp-action@master
-#      with:
-#        host: ${{ secrets.HOST }}
-#        username: ${{ secrets.SSH_USERNAME }}
-#        key: ${{ secrets.SSH_PRIVATE_KEY }}
-#        source: nuzones-service-${{ github.sha }}.jar
-#        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+    - name: install ssh-agent
+      uses: webfactory/ssh-agent@v0.5.0
 
-    - name: Deploy artifact
-      uses: appleboy/ssh-action@v0.1.2
+    - name: Add SSH Private Key
+      run: echo "${{ secrets.SSH_PRIVATE_KEY }}" | ssh-add -
+
+    - name: Deploy
+      uses: appleboy/scp-action@master
       with:
-        host: ${{ secrets.SSH_HOST }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        host: ${{ secrets.HOST }}
         username: ${{ secrets.SSH_USERNAME }}
-        script: |
-          mkdir -p /app/nuzones 
-          cd /app/nuzones
-          echo 'Deployment successful to digital ocean'
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        source: nuzones-service-${{ github.sha }}.jar
+        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+
+#    - name: Deploy artifact
+#      uses: appleboy/ssh-action@v0.1.2
+#      with:
+#        host: ${{ secrets.SSH_HOST }}
+#        key: ${{ secrets.SSH_PRIVATE_KEY }}
+#        username: ${{ secrets.SSH_USERNAME }}
+#        script: |
+#          mkdir -p /app/nuzones
+#          cd /app/nuzones
+#          echo 'Deployment successful to digital ocean'
