--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,10 +39,12 @@ jobs:
         name: nuzones-service
 
     - name: install ssh-agent
-      uses: webfactory/ssh-agent@v0.5.0
+      uses: webfactory/ssh-agent@v0.7.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Add SSH Private Key
-      run: echo "${{ secrets.SSH_PRIVATE_KEY }}" | ssh-add -
+#    - name: Add SSH Private Key
+#      run: echo "${{ secrets.SSH_PRIVATE_KEY }}" | ssh-add -
 
     - name: Deploy
       uses: appleboy/scp-action@master
