--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,40 +20,52 @@ jobs:
       run: mvn -B clean package --file pom.xml
       
     - name: Rename the artifact
-      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar nuzones-service-${{ github.sha }}.jar
+      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar target/nuzones-service-${{ github.sha }}.jar
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3.1.2
-      with:
-        name: nuzones-service
-        path: nuzones-service-${{ github.sha }}.jar
-  
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment: nuzones
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v3.0.2
-      with:
-        name: nuzones-service
+#    - name: Upload artifact
+#      uses: actions/upload-artifact@v3.1.2
+#      with:
+#        name: nuzones-service
+#        path: nuzones-service-${{ github.sha }}.jar
 
     - name: install ssh-agent
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-#    - name: Add SSH Private Key
-#      run: echo "${{ secrets.SSH_PRIVATE_KEY }}" | ssh-add -
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Deploy
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: nuzones-service-${{ github.sha }}.jar
-        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: target/nuzones-service-${{ github.sha }}.jar
+          target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    environment: nuzones
+#    steps:
+#    - name: Download artifact
+#      uses: actions/download-artifact@v3.0.2
+#      with:
+#        name: nuzones-service
+#
+#    - name: install ssh-agent
+#      uses: webfactory/ssh-agent@v0.7.0
+#      with:
+#        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+#
+#
+#    - name: Deploy
+#      uses: appleboy/scp-action@master
+#      with:
+#        host: ${{ secrets.HOST }}
+#        username: ${{ secrets.SSH_USERNAME }}
+#        key: ${{ secrets.SSH_PRIVATE_KEY }}
+#        source: nuzones-service-${{ github.sha }}.jar
+#        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
 
 #    - name: Deploy artifact
 #      uses: appleboy/ssh-action@v0.1.2
