--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,9 +17,6 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
-      
-    - name: Rename the artifact
-      run: cp target/nuzones-service-0.0.1-SNAPSHOT.jar target/nuzones-service-${{ github.sha }}.jar
 
     - name: install ssh-agent
       uses: webfactory/ssh-agent@v0.7.0
@@ -32,5 +29,5 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: target/nuzones-service-${{ github.sha }}.jar
-        target: app/nuzones/nuzones-service-${{ github.sha }}.jar
+        source: target/nuzones-service-0.0.1-SNAPSHOT.jar
+        target: app/nuzones/nuzones-service-0.0.1-SNAPSHOT.jar
