--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,19 +15,12 @@ jobs:
         distribution: 'corretto'
         cache: maven
 
-    - name: Build with Maven
-      run: mvn -B clean package --file pom.xml
+    - name: Running Tests
+      run: mvn -B clean
 
-    - name: install ssh-agent
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-    - name: Deploy
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: target/nuzones-service-0.0.1-SNAPSHOT.jar
-        target: app/nuzones/nuzones-service-0.0.1-SNAPSHOT.jar
+    - name: Deploy to Heroku
+    - uses: akhileshns/heroku-deploy@v3.12.13
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
