--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,8 +19,8 @@ jobs:
       run: mvn -B clean
 
     - name: Deploy to Heroku
-    - uses: akhileshns/heroku-deploy@v3.12.13
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+      uses: akhileshns/heroku-deploy@v3.12.13
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+        heroku_email: ${{ secrets.HEROKU_EMAIL }}
