--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,12 +6,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: nuzones
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '8'
         distribution: 'corretto'
         cache: maven
 
@@ -21,6 +22,6 @@ jobs:
     - name: Deploy to Heroku
       uses: akhileshns/heroku-deploy@v3.12.13
       with:
-        heroku_api_key: ae99a02d-a9b1-44df-b5cb-94cda0925393
-        heroku_app_name: nuzones
-        heroku_email: uobjuniorsolutions@gmail.com
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+        heroku_email: ${{ secrets.HEROKU_EMAIL }}
