--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 	<groupId>com.nuzones</groupId>
 	<artifactId>nuzones-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
 	<name>nuzones-service</name>
 	<description>Nuzones application</description>
 	<properties>
@@ -51,6 +50,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.nuzones.nuzonesservice.NuzonesServiceApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 			<plugin>
                 <groupId>com.github.eirslett</groupId>
