--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/classes/static</outputDirectory>
+                            <outputDirectory>${project.build.directory}/classes/public</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>${project.basedir}/frontend/dist</directory>
