push to heroku container registry

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,10 +19,17 @@ jobs:
     - name: Running Tests
       run: mvn -B clean
 
-    - name: Deploy to Heroku
-      uses: akhileshns/heroku-deploy@v3.12.13
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-        heroku_email: ${{ secrets.HEROKU_EMAIL }}
-#        usedocker: true
+    - name: Heroku Container Registry Login
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:login
+
+    - name: Build and push
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+
+    - name: Release
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
