--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'corretto'
-        cache: maven
+#        cache: maven
     - name: Running Tests
       run: ./mvnw -B clean package --file pom.xml
     - name: Heroku Container Registry Login
