--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,13 +15,13 @@ jobs:
         java-version: '17'
         distribution: 'corretto'
         cache: maven
-    - name: Running Tests
+    - name: Build Artifact
       run: ./mvnw -B clean package --file pom.xml
     - name: Heroku Container Registry Login
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: heroku container:login
-    - name: Build and push
+    - name: Build Docker Image
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
