added staging db config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=${PORT:8080}
-spring.profiles.active=dev
+spring.profiles.active=staging
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
+#spring.sql.init.mode=embedded
