--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8080}
-spring.profiles.active=staging
+spring.profiles.active=dev
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 #spring.sql.init.mode=embedded
