added security to admin endpoints

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
 spring.h2.console.enabled=true
-spring.datasource.platform=h2
+spring.sql.init.platform=h2
+app.http.api-key=109353c6-6432-4acf-8e77-ef842f64a664
