--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.sql.init.platform=h2
-app.http.api-key=109353c6-6432-4acf-8e77-ef842f64a664
+app.http.api-key=<your-api-key>
