updated email service

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.sql.init.platform=h2
 app.http.api-key=your-api-key
+mail.recipient.email=xxxxxx
+spring.mail.username=xxxxx
+spring.mail.password=xxxxx
