--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -2,6 +2,6 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 app.http.api-key=${API_KEY}
-mail.recipient.email=${MAIL_RECIPIENT: }
-spring.mail.username=${MAIL_USERNAME: }
-spring.mail.password=${MAIL_PASSWORD: }
+mail.recipient.email=${MAIL_RECIPIENT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
