switch email service to sendgrid

--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -2,6 +2,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 app.http.api-key=${API_KEY}
-mail.recipient.email=${MAIL_RECIPIENT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+sendgrid.sender.email=${SENDGRID_MAIL_SENDER}
+sendgrid.recipient.email=${SENDGRID_MAIL_RECIPIENT}
+sendgrid.api.key=${SENDGRID_API_KEY}
+sendgrid.template.ambassador_signup=${SENDGRID_AMBASSADOR_TEMPLATE_ID}
