added contact us email assembler

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,4 @@ sendgrid.sender.email=xxxxxx
 sendgrid.recipient.email=xxxxxx
 sendgrid.api.key=xxxxxx
 sendgrid.template.ambassador_signup=xxxxxx
+sendgrid.template.contact_us=xxxxxx
