--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -6,3 +6,4 @@ sendgrid.sender.email=${SENDGRID_MAIL_SENDER}
 sendgrid.recipient.email=${SENDGRID_MAIL_RECIPIENT}
 sendgrid.api.key=${SENDGRID_API_KEY}
 sendgrid.template.ambassador_signup=${SENDGRID_AMBASSADOR_TEMPLATE_ID}
+sendgrid.template.contact_us=${SENDGRID_CONTACT_TEMPLATE_ID}
