--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,4 @@ sendgrid.recipient.email=xxxxxx
 sendgrid.api.key=xxxxxx
 sendgrid.template.ambassador_signup=xxxxxx
 sendgrid.template.contact_us=xxxxxx
+sendgrid.template.add_new_zone=xxxxxxx
