--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -7,3 +7,4 @@ sendgrid.recipient.email=${SENDGRID_MAIL_RECIPIENT}
 sendgrid.api.key=${SENDGRID_API_KEY}
 sendgrid.template.ambassador_signup=${SENDGRID_AMBASSADOR_TEMPLATE_ID}
 sendgrid.template.contact_us=${SENDGRID_CONTACT_TEMPLATE_ID}
+sendgrid.template.add_new_zone=${SENDGRID_NEW_ZONE_TEMPLATE_ID}
