added instagram token refresh service

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,5 @@ sendgrid.api.key=xxxxxx
 sendgrid.template.ambassador_signup=xxxxxx
 sendgrid.template.contact_us=xxxxxx
 sendgrid.template.add_new_zone=xxxxxxx
+instagram.token-refresh.enabled=false
+instagram.token-refresh.job-interval=0 */1 * ? * *
