--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -8,3 +8,5 @@ sendgrid.api.key=${SENDGRID_API_KEY}
 sendgrid.template.ambassador_signup=${SENDGRID_AMBASSADOR_TEMPLATE_ID}
 sendgrid.template.contact_us=${SENDGRID_CONTACT_TEMPLATE_ID}
 sendgrid.template.add_new_zone=${SENDGRID_NEW_ZONE_TEMPLATE_ID}
+instagram.token-refresh.enabled=${INSTAGRAM_TOKEN_REFRESH}
+instagram.token-refresh.job-interval=${INSTAGRAM_TOKEN_REFRESH_INTERVAL}
